<resources>
    <string name="app_name">VillageReach</string>
    <string name="Delivery">Get deliveries</string>
    <string name="Sync">Sync</string>
    <string name="send">Send</string>
    <string name="SaveForm">Save Form</string>
    <string name="submit">Submit</string>
    s<string name="hint">Enter Delivery #</string>
    <string name="sync_now">Sync</string>
    <string name="login">Login</string>
    <string name="orderId">Order Id:</string>
    <string name="supplyingFacilityName">Supplying depot:</string>
    <string name="requestingFacilityName">Requesting facility:</string>
    <string name="programName">Program Name:</string>
    <string name="processingPeriodName">Period:</string>
    <string name="orderDate">Order Date:</string>
    <string name="emergency">Emergency:</string>
    <string name="orderCode">Order no:</string>
    <string name="notes_label">Notes</string>

    <string name="quantity_accepted_label">Quantity Accepted</string>
    <string name="quantity_shipped_label">Quantity Shipped</string>
    <string name="quantity_ordered_label">Quantity Ordered</string>
    <string name="product_unit_label">Product Unit</string>
    <string name="rejection_reason_label">Rejection Reason</string>
    <string name="quantity_returned_label">Quantity Returned</string>
    <string name="id_label">Product Name</string>
    <string name="proof_of_delivery">Proof Of Delivery</string>
    <!--    array for the rejection reason of the proof of delivery  -->
    <string-array name="rejection_reason">
        <item>N/A</item>
        <item>Transfer Out</item>
        <item>Damage</item>
        <item>Expired</item>
        <item>Stolen</item>
        <item>Lost</item>
        <item>Passed open-vial time limit</item>
        <item>Cold chain failure</item>
    </string-array>

    <string name="delivered_by_label">Delivered by:</string>
    <string name="received_by_label">Received by:</string>
    <string name="sign">Sign here</string>
    <string name="ViewForm">View Form</string>
    <string name="status_label">Order status:</string>
    <string name="program">Program:</string>
<!--    <string name="lot_code">Lot Code</string>-->
    <string name="quantity_rejected_label">Quantity rejected</string>
    <string name="Status">Status</string>


</resources>