<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Delivery" />

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Sync" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="8dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">


                <TextView
                    android:id="@+id/order_code_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:text="@string/orderCode" />

                <TextView
                    android:id="@+id/order_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/status_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:text="@string/status_label"/>

                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/requesting_facility_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:text="@string/requestingFacilityName" />

                <TextView
                    android:id="@+id/requesting_facility"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/supplying_depot_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:text="@string/supplyingFacilityName" />

                <TextView
                    android:id="@+id/supplying_depot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/program_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:text="@string/program" />

                <TextView
                    android:id="@+id/program"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


                <TextView
                    android:id="@+id/period_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:text="@string/processingPeriodName" />

                <TextView
                    android:id="@+id/period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/order_date_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:text="@string/orderDate" />

                <TextView
                    android:id="@+id/order_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/emergency_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:text="@string/emergency" />

                <TextView
                    android:id="@+id/emergency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



                <Button style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/formClick"
                    android:onClick="formActivity"
                    android:text="@string/ViewForm"
                    />

        </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>
</ScrollView>